// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Karura dex > stable swap works > events 1`] = `
[
  {
    "data": {
      "liquidityChanges": [
        "(rounded 20000000000)",
        1000000000000,
      ],
      "path": [
        {
          "Token": "KSM",
        },
        {
          "Token": "KUSD",
        },
      ],
      "trader": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "Swap",
    "section": "dex",
  },
]
`;

exports[`Karura dex > stable swap works > events 2`] = `
[
  {
    "data": {
      "a": 10000,
      "balances": [
        "(rounded 1000000000000000000)",
        "(rounded 30000000000000000)",
        "(rounded 30000000000000000)",
      ],
      "inputAmount": 1000000000000,
      "inputAsset": {
        "Token": "KUSD",
      },
      "minOutputAmount": 0,
      "outputAmount": "(rounded 700000)",
      "outputAsset": {
        "ForeignAsset": 7,
      },
      "poolId": 1,
      "swapper": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
      "totalSupply": "(rounded 1000000000000000000)",
    },
    "method": "TokenSwapped",
    "section": "stableAsset",
  },
]
`;

exports[`Karura dex > supply swap works > events 1`] = `
[
  {
    "data": {
      "liquidityChanges": [
        1000000000000,
        "(rounded 50000000000000)",
      ],
      "path": [
        {
          "Token": "KSM",
        },
        {
          "Token": "KUSD",
        },
      ],
      "trader": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "Swap",
    "section": "dex",
  },
]
`;

exports[`Karura dex > target swap works > events 1`] = `
[
  {
    "data": {
      "liquidityChanges": [
        "(rounded 20000000000)",
        1000000000000,
      ],
      "path": [
        {
          "Token": "KSM",
        },
        {
          "Token": "KUSD",
        },
      ],
      "trader": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "Swap",
    "section": "dex",
  },
]
`;
